Working with alignment issues with images in recipes, nearly fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,16 +2,17 @@
 
 * {
     margin: 0;
-    padding: 0;    
+    padding: 0;     
     text-decoration: none !important;
+    
 }
 
 body {    
     background-color:whitesmoke;
-    max-width: 1500px;
+    max-width: 1500px;   
     margin-left: auto;
-    margin-right: auto;       
-    /* height: 100vh; */     
+    margin-right: auto       
+        
 }
 
 html * {
@@ -155,7 +156,7 @@ footer {
 /* alignment of images in blogs */
 .image-container {
     position: relative;
-    padding: 10px;    
+    /* padding: 10px;     */
 }
 
 
@@ -163,8 +164,16 @@ footer {
 .card-img-top1 {
     border-radius: 5px;
     border: 2px solid rgb(20, 88, 20);
-    width: 380px;
-    height: 300px;   
+    height: 250px;
+    object-fit: cover;
+       
+}
+
+.recipeimage {
+    width: 300px;
+    height: 250px;
+    width: 350px;
+    height: 250px;
 }
 
 /*Flash for author on image in blogs*/
@@ -783,11 +792,11 @@ ol li::before {
     color: white !important;
 }
 
-   .img-fluid {
+   /* .img-fluid {
     width: 90vw;
     height: auto;
     object-fit: cover; 
-} 
+}  */
 
 .card-body2 {
     min-height: 300px;
@@ -830,6 +839,10 @@ ol li::before {
     transform: scale(1.05);
 }
 
+.how-img {
+    width: 80%;
+    height: auto;
+}
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 991.98px){ 
 
